--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
 	"displayName": "vscode-denofunc",
 	"description": "VSCode extension as denofunc wrapper",
 	"version": "0.0.1",
-  "publisher": "horihiro",
+	"publisher": "horihiro",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/horihiro/vscode-denofunc"
 	},
-  "icon": "resources/denofunc.png",
+	"icon": "resources/denofunc.png",
 	"engines": {
 		"vscode": "^1.53.0"
 	},
 	"categories": [
-		"Azure", "Other"
+		"Azure",
+		"Other"
 	],
 	"homepage": "https://github.com/horihiro/vscode-denofunc/blob/main/README.md",
 	"license": "SEE LICENSE IN LICENSE",
@@ -22,25 +23,25 @@
 		"Functions",
 		"serverless",
 		"deno",
-    "denofunc"
+		"denofunc"
 	],
 	"activationEvents": [
 		"*"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
-    "configuration":[
-      {
-        "title": "DenoFunc",
-        "properties": {
-          "denofunc.path": {
-            "type": "string",
-            "description": "Path to `denofunc` command (default: `denofunc` )",
-            "default": "denofunc"
-          }
-        }
-      }
-    ],
+		"configuration": [
+			{
+				"title": "DenoFunc",
+				"properties": {
+					"denofunc.path": {
+						"type": "string",
+						"description": "Path to `denofunc` command (default: `denofunc` )",
+						"default": "denofunc"
+					}
+				}
+			}
+		],
 		"commands": [
 			{
 				"command": "DenoFunc.initProject",
@@ -61,6 +62,7 @@
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
+		"vscode:package": "vsce package --githubBranch main",
 		"compile": "tsc -p ./",
 		"watch": "tsc -watch -p ./",
 		"pretest": "npm run compile && npm run lint",
@@ -78,10 +80,11 @@
 		"glob": "^7.1.6",
 		"mocha": "^8.2.1",
 		"typescript": "^4.1.3",
+		"vsce": "^1.85.1",
 		"vscode-test": "^1.5.0"
 	},
-  "extensionDependencies": [
-    "ms-azuretools.vscode-azurefunctions",
-    "denoland.vscode-deno"
-  ]
+	"extensionDependencies": [
+		"ms-azuretools.vscode-azurefunctions",
+		"denoland.vscode-deno"
+	]
 }
