--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
 		"@types/glob": "^7.1.3",
 		"@types/mocha": "^8.0.4",
 		"@types/node": "^12.11.7",
+		"@types/semver": "^7.3.6",
 		"@types/vscode": "^1.53.0",
 		"@typescript-eslint/eslint-plugin": "^4.14.1",
 		"@typescript-eslint/parser": "^4.14.1",
@@ -96,5 +97,8 @@
 	"extensionDependencies": [
 		"ms-azuretools.vscode-azurefunctions",
 		"denoland.vscode-deno"
-	]
+	],
+	"dependencies": {
+		"semver": "^7.3.5"
+	}
 }
